# RoboMetaNorm

./: .gitignore  README.md  pyproject.toml
docs/design/: episode-sampling.md  review-scope-cleanup.md
docs/superpowers/plans/: 2026-07-10-p0-scan-and-output.md  2026-07-10-p1-camera-normalization.md  2026-07-14-robometanorm-mini.md  2026-07-16-robo-annotation.md  2026-07-17-two-stage-local-vlm.md
docs/superpowers/specs/: 2026-07-14-robometanorm-mini-design.md  2026-07-16-cli-progress-design.md  2026-07-16-local-robot-identity-annotation-design.md  2026-07-16-main-follower-single-arm-design.md  2026-07-16-robo-annotation-design.md  2026-07-16-vlm-phase-progress-timeout-design.md  2026-07-17-readme-input-output-design.md  2026-07-17-review-camera-preservation-design.md  2026-07-17-two-stage-local-vlm-design.md
src/robometanorm/: __init__.py  __main__.py  annotation.py  episode_sampling.py  evidence.py  models.py  pipeline.py  robot_identity.py  standard.py  vlm.py  writer.py
tests/: __init__.py  mini_fixtures.py
tests/integration/: test_cli.py
tests/unit/: test_annotation.py  test_architecture.py  test_camera_media.py  test_camera_naming.py  test_camera_normalizer.py  test_camera_topology.py  test_discovery.py  test_episode_sampling.py  test_evidence.py  test_gripper_pipeline.py  test_json_writer.py  test_machine_naming.py  test_machine_normalizer.py  test_machine_profile.py  test_machine_vlm.py  test_models.py  test_pipeline.py  test_preconditions.py  test_profile_cache.py  test_robot_identity.py  test_standard.py  test_vlm.py  test_vlm_client.py  test_writer.py
(+43 files in other folders)
